RESOLVED FIXED267078
REGRESSION(268038@main): poor performance with :has(+ :not(.class)) pseudo-class selector
https://bugs.webkit.org/show_bug.cgi?id=267078
Summary REGRESSION(268038@main): poor performance with :has(+ :not(.class)) pseudo-cl...
Antti Koivisto
Reported 2024-01-04 06:24:28 PST
It gets mistakenly classified scope breaking.
Attachments
Antti Koivisto
Comment 1 2024-01-04 06:24:44 PST
Antti Koivisto
Comment 2 2024-01-04 06:38:21 PST
EWS
Comment 3 2024-01-04 23:59:28 PST
Committed 272678@main (9b67f95c4810): <https://commits.webkit.org/272678@main> Reviewed commits have been landed. Closing PR #22381 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.